issue: Align the button in the modal [person card, relationship tab project card popup], fix the alignment issue in the green card, fix the home button alignment issue]
issue: Align the button in the modal [person card, relationship tab project card popup], fix the alignment issue in the green card, fix the home button alignment issue]

--- a/Client/projects/coi/src/app/disclosure/disclosure.component.scss
+++ b/Client/projects/coi/src/app/disclosure/disclosure.component.scss
@@ -255,3 +255,8 @@ table {
   background-color: #007DEC;
 }
 
+.home-btn-center{
+  display: flex;
+  justify-content: center;
+}
+
